--- a/Untitled26.ipynb
+++ b/Untitled26.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled26.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNi7y06SnZdPb/WXvds7wP3",
+      "authorship_tag": "ABX9TyOJgu0Qo+JLptuyj7d353OJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,20 +43,315 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 753
+          "height": 602
         },
         "id": "r5BcGx11wGpt",
-        "outputId": "cc001b82-c489-4726-9787-4dc41cecd1ce"
+        "outputId": "4287f5fe-d464-45a6-c559-a87fda0361fe"
       },
       "source": [
         "#ambil data\n",
         "raw = pd.read_csv('dataset.csv', encoding='utf-8')\n",
+        "#ditampilkan\n",
+        "raw"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Name</th>\n",
+              "      <th>Platform</th>\n",
+              "      <th>Year_of_Release</th>\n",
+              "      <th>Genre</th>\n",
+              "      <th>Publisher</th>\n",
+              "      <th>NA_Sales</th>\n",
+              "      <th>EU_Sales</th>\n",
+              "      <th>JP_Sales</th>\n",
+              "      <th>Other_Sales</th>\n",
+              "      <th>Global_Sales</th>\n",
+              "      <th>Critic_Score</th>\n",
+              "      <th>Critic_Count</th>\n",
+              "      <th>User_Score</th>\n",
+              "      <th>User_Count</th>\n",
+              "      <th>Developer</th>\n",
+              "      <th>Rating</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Wii Sports</td>\n",
+              "      <td>Wii</td>\n",
+              "      <td>2006.0</td>\n",
+              "      <td>Sports</td>\n",
+              "      <td>Nintendo</td>\n",
+              "      <td>41.36</td>\n",
+              "      <td>28.96</td>\n",
+              "      <td>3.77</td>\n",
+              "      <td>8.45</td>\n",
+              "      <td>82.53</td>\n",
+              "      <td>76.0</td>\n",
+              "      <td>51.0</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>322.0</td>\n",
+              "      <td>Nintendo</td>\n",
+              "      <td>E</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Super Mario Bros.</td>\n",
+              "      <td>NES</td>\n",
+              "      <td>1985.0</td>\n",
+              "      <td>Platform</td>\n",
+              "      <td>Nintendo</td>\n",
+              "      <td>29.08</td>\n",
+              "      <td>3.58</td>\n",
+              "      <td>6.81</td>\n",
+              "      <td>0.77</td>\n",
+              "      <td>40.24</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Mario Kart Wii</td>\n",
+              "      <td>Wii</td>\n",
+              "      <td>2008.0</td>\n",
+              "      <td>Racing</td>\n",
+              "      <td>Nintendo</td>\n",
+              "      <td>15.68</td>\n",
+              "      <td>12.76</td>\n",
+              "      <td>3.79</td>\n",
+              "      <td>3.29</td>\n",
+              "      <td>35.52</td>\n",
+              "      <td>82.0</td>\n",
+              "      <td>73.0</td>\n",
+              "      <td>8.3</td>\n",
+              "      <td>709.0</td>\n",
+              "      <td>Nintendo</td>\n",
+              "      <td>E</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Wii Sports Resort</td>\n",
+              "      <td>Wii</td>\n",
+              "      <td>2009.0</td>\n",
+              "      <td>Sports</td>\n",
+              "      <td>Nintendo</td>\n",
+              "      <td>15.61</td>\n",
+              "      <td>10.93</td>\n",
+              "      <td>3.28</td>\n",
+              "      <td>2.95</td>\n",
+              "      <td>32.77</td>\n",
+              "      <td>80.0</td>\n",
+              "      <td>73.0</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>192.0</td>\n",
+              "      <td>Nintendo</td>\n",
+              "      <td>E</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Pokemon Red/Pokemon Blue</td>\n",
+              "      <td>GB</td>\n",
+              "      <td>1996.0</td>\n",
+              "      <td>Role-Playing</td>\n",
+              "      <td>Nintendo</td>\n",
+              "      <td>11.27</td>\n",
+              "      <td>8.89</td>\n",
+              "      <td>10.22</td>\n",
+              "      <td>1.00</td>\n",
+              "      <td>31.37</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16714</th>\n",
+              "      <td>Samurai Warriors: Sanada Maru</td>\n",
+              "      <td>PS3</td>\n",
+              "      <td>2016.0</td>\n",
+              "      <td>Action</td>\n",
+              "      <td>Tecmo Koei</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16715</th>\n",
+              "      <td>LMA Manager 2007</td>\n",
+              "      <td>X360</td>\n",
+              "      <td>2006.0</td>\n",
+              "      <td>Sports</td>\n",
+              "      <td>Codemasters</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16716</th>\n",
+              "      <td>Haitaka no Psychedelica</td>\n",
+              "      <td>PSV</td>\n",
+              "      <td>2016.0</td>\n",
+              "      <td>Adventure</td>\n",
+              "      <td>Idea Factory</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16717</th>\n",
+              "      <td>Spirits &amp; Spells</td>\n",
+              "      <td>GBA</td>\n",
+              "      <td>2003.0</td>\n",
+              "      <td>Platform</td>\n",
+              "      <td>Wanadoo</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16718</th>\n",
+              "      <td>Winning Post 8 2016</td>\n",
+              "      <td>PSV</td>\n",
+              "      <td>2016.0</td>\n",
+              "      <td>Simulation</td>\n",
+              "      <td>Tecmo Koei</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>16719 rows × 16 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                Name Platform  ...  Developer Rating\n",
+              "0                         Wii Sports      Wii  ...   Nintendo      E\n",
+              "1                  Super Mario Bros.      NES  ...        NaN    NaN\n",
+              "2                     Mario Kart Wii      Wii  ...   Nintendo      E\n",
+              "3                  Wii Sports Resort      Wii  ...   Nintendo      E\n",
+              "4           Pokemon Red/Pokemon Blue       GB  ...        NaN    NaN\n",
+              "...                              ...      ...  ...        ...    ...\n",
+              "16714  Samurai Warriors: Sanada Maru      PS3  ...        NaN    NaN\n",
+              "16715               LMA Manager 2007     X360  ...        NaN    NaN\n",
+              "16716        Haitaka no Psychedelica      PSV  ...        NaN    NaN\n",
+              "16717               Spirits & Spells      GBA  ...        NaN    NaN\n",
+              "16718            Winning Post 8 2016      PSV  ...        NaN    NaN\n",
+              "\n",
+              "[16719 rows x 16 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 753
+        },
+        "id": "SqeGTaMkvvaR",
+        "outputId": "f2c9abb0-8a0a-47ab-b8aa-990c5dea36d0"
+      },
+      "source": [
         "#data mentah dihilangkan kolom yang tidak terisi \n",
         "df = raw.dropna()\n",
         "#ditampilkan\n",
         "df"
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -333,20 +628,9 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 6
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Jm2QHMgLvRSM"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
